# homework_19.2

./: README.md  catalog_data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at_alter_product_created_at_and_more.py  0003_remove_product_manufactured_at_and_more.py  0004_alter_product_created_at_and_more.py  0005_blog.py  0006_version.py  0007_category_slug_product_slug.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contacts.html  game_detail.html  genres_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: filter.py  media.py
config/: settings.py  urls.py
static/js/: color-modes.js
