[tool.poetry]
name = "homework-19-2 1"
version = "0.1.0"
description = ""
authors = ["Екатерина <Krinicyna1998@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
