[tool.poetry]
name = "homework-19-2 1"
version = "0.1.0"
description = ""
authors = ["Екатерина <Krinicyna1998@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_19"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.3.0"
django = "^5.0.4"
psycopg2 = "^2.9.9"
ipython = "^8.23.0"
django-stubs = "^4.2.7"
django-dump-load-utf8 = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
